# opencode-gateway

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  boltffi.toml  package.json  src  tsconfig.json
crates/core/: Cargo.toml
crates/core/src/: channel.rs  conversation.rs  cron.rs  engine.rs  execution.rs  lib.rs  message.rs  progressive.rs  status.rs
crates/core/src/cron/: job.rs  mod.rs  schedule.rs
crates/ffi/: Cargo.toml  boltffi.toml
crates/ffi/src/: binding.rs  lib.rs  runtime.rs
crates/ffi/src/binding/: adapters.rs  driver.rs  execution.rs  export.rs  mod.rs  progressive.rs  traits.rs  types.rs
crates/ffi/src/binding/types/: execution.rs  gateway.rs  mod.rs  opencode.rs
crates/ffi/src/host/: clock.rs  error.rs  logger.rs  mod.rs  opencode.rs  store.rs  transport.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: http.rs  main.rs  options.rs  paths.rs  restart.rs  server.rs  workspace.rs
crates/launcher/src/commands/: doctor.rs  init.rs  mod.rs  serve.rs  warm.rs
crates/launcher/src/port_probe/: linux.rs  macos.rs  mod.rs  windows.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  types.rs
crates/runtime/src/driver/: mod.rs  prompt_ids.rs  render.rs  tests.rs
scripts/: build-binding.mjs  publish-npm.mjs  smoke-binding.mjs  smoke-opencode-server.mjs
