[workspace]
members = ["crates/core", "crates/ffi", "crates/launcher"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["M4n5ter <m4n5terrr@gmail.com>"]
rust-version = "1.85"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
