[package]
name = "opencode-gateway-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
jsonc-parser = { version = "0.32", features = ["serde"] }
listeners = "0.5"
opencode-gateway-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
